hphp/hack/test/typecheck/function_pointer/bad_syntax.php.exp
File "bad_syntax.php", line 9, characters 8-20:
Function pointers `<>` can only be created with toplevel functions and explicitly named static methods. Use lambdas `(...) ==> {...}` for other cases. (Parsing[1002])
